# manzai-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/images/: layout.json
assets/scripts/: cloud.json  konbini.json  manjaro.json  python_neta.json  python_neta_manzai.json
docs/: MULTITALK.md  RELATED_WORK.md  SETUP.md  index.html  research_fullduplex_manzai.md
scripts/: assemble_audio.py  compare_scripts.py  extract_sprites.py  generate_lines.py  generate_script.py  generate_sfx.py  make_cut_video.py  make_duo_video.py  prepare_multitalk.py  timing_model.py
